<resources>
    <string name="app_name">Music Player</string>
    <string name="load">load</string>
    <string name="save">save</string>
    <string name="loop">Loop</string>
    <string name="play">Play</string>
    <string name="mix">Mix</string>
    <string name="track_title">Track Title</string>
    <string name="edit">Edit</string>
    <string name="rename">Rename</string>
    <string name="track_options">Track Options</string>
    <string name="reset">Reset</string>
    <string name="no_track_selected">No Track Selected</string>
    <string name="options">Options</string>
    <string name="end_sec">End (sec):</string>
    <string name="_0">0</string>
    <string name="start_sec">Start (sec):</string>
    <string name="play_preview">Play Preview</string>
    <string name="menu">Menu</string>
    <string name="new_playlist">New Playlist</string>
    <string name="select_playlist">Select Playlist</string>
    <string name="cancel">Cancel</string>
    <string name="add_to_playlist">Add to playlist</string>
    <string name="search">Search</string>
    <string name="sort">Sort\n</string>
    <string name="remove">Remove\n</string>
    <string name="analyze">Analyze</string>
    <string name="previous_track">Previous Track</string>
    <string name="next_track">Next Track</string>
    <string-array name="playback_options">
        <item>Loop</item>
        <item>Mix</item>
    </string-array>
</resources>