<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/dialog_background"
    android:padding="16dp">

    <TextView
        android:id="@+id/dialog_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/select_playlist"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- FrameLayout to hold the list and the progress bar -->
    <FrameLayout
        android:id="@+id/playlist_container"
        android:layout_width="0dp"
        android:layout_height="200dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintTop_toBottomOf="@id/dialog_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/playlist_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone" /> <!-- Start as GONE -->

        <ProgressBar
            android:id="@+id/playlist_progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="visible" /> <!-- Start as VISIBLE -->

    </FrameLayout>

    <Button
        android:id="@+id/button_create_playlist"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/new_playlist"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button_cancel"
        app:layout_constraintTop_toBottomOf="@id/playlist_container" /> <!-- Constrain to container -->

    <Button
        android:id="@+id/button_cancel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/cancel"
        app:layout_constraintStart_toEndOf="@id/button_create_playlist"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/button_create_playlist" />

</androidx.constraintlayout.widget.ConstraintLayout>